tests/integration/valid/nested_let_valid.lof
// SHOULD_PASS - Valid nested let expressions
proof NestedLetValid {
    input x: field;
    input y: field;
    let sum = x + y in
    let doubled = sum + sum in
    doubled
}