tests/integration/invalid/test_double_usage.lof
// SHOULD_FAIL
proof TestDoubleUsage {
    input x: field;
    let y = x + 1 in
    let z = x + 2 in
    z
}